# python-fastapi

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
conf/: db_config.py
functions/: simple.py
helloworld/: helloworld_repository.py  helloworld_service.py
item/: item_api.py  item_model.py  item_repository.py  item_service.py
shop/: shop_api.py  shop_model.py  shop_repository.py  shop_service.py
shop/dto/: ShopDto.py
test/: test_simple.py
